Lore/src/org/xgmtk/lore/parser/LoreParser.java
// Generated from C:\Users\kando\git\Lore\Lore\src\org\xgmtk\lore\parser\Lore.g4 by ANTLR 4.1
package org.xgmtk.lore.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class LoreParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__68=1, T__67=2, T__66=3, T__65=4, T__64=5, T__63=6, T__62=7, T__61=8, 
		T__60=9, T__59=10, T__58=11, T__57=12, T__56=13, T__55=14, T__54=15, T__53=16, 
		T__52=17, T__51=18, T__50=19, T__49=20, T__48=21, T__47=22, T__46=23, 
		T__45=24, T__44=25, T__43=26, T__42=27, T__41=28, T__40=29, T__39=30, 
		T__38=31, T__37=32, T__36=33, T__35=34, T__34=35, T__33=36, T__32=37, 
		T__31=38, T__30=39, T__29=40, T__28=41, T__27=42, T__26=43, T__25=44, 
		T__24=45, T__23=46, T__22=47, T__21=48, T__20=49, T__19=50, T__18=51, 
		T__17=52, T__16=53, T__15=54, T__14=55, T__13=56, T__12=57, T__11=58, 
		T__10=59, T__9=60, T__8=61, T__7=62, T__6=63, T__5=64, T__4=65, T__3=66, 
		T__2=67, T__1=68, T__0=69, DICE=70, UNIT_NAME=71, NAME=72, NORMALSTRING=73, 
		CHARSTRING=74, LONGSTRING=75, INT=76, HEX=77, FLOAT=78, HEX_FLOAT=79, 
		COMMENT=80, LINE_COMMENT=81, WS=82, NEWLINE=83;
	public static final String[] tokenNames = {
		"<INVALID>", "'&'", "'self'", "'result'", "'*'", "'<'", "'!='", "'<='", 
		"'range'", "'override'", "'}'", "'url'", "'case'", "'dice'", "'encoding'", 
		"'%'", "')'", "'D'", "'@'", "'unit'", "'='", "'html'", "'desc'", "'reviser'", 
		"'docinfo'", "',...,'", "'version'", "'|'", "'!'", "'real'", "'enum'", 
		"'alter'", "'form'", "'select'", "'default'", "','", "'-'", "'('", "':'", 
		"'jid'", "'<...<'", "'private'", "'?'", "'as'", "'{'", "'section'", "'extends'", 
		"'rule'", "'date'", "'import'", "'function'", "'.'", "'constant'", "'+'", 
		"'list'", "'loc'", "';'", "'history'", "'number'", "'xml'", "'>'", "':='", 
		"'integer'", "',...<'", "'string'", "'author'", "'=='", "'/'", "'>='", 
		"'<...,'", "DICE", "UNIT_NAME", "NAME", "NORMALSTRING", "CHARSTRING", 
		"LONGSTRING", "INT", "HEX", "FLOAT", "HEX_FLOAT", "COMMENT", "LINE_COMMENT", 
		"WS", "NEWLINE"
	};
	public static final int
		RULE_lore = 0, RULE_header = 1, RULE_docinfo = 2, RULE_encoding = 3, RULE_version = 4, 
		RULE_description = 5, RULE_author = 6, RULE_history = 7, RULE_import_other = 8, 
		RULE_section = 9, RULE_private_section_element = 10, RULE_section_element = 11, 
		RULE_qName = 12, RULE_definition = 13, RULE_type_def = 14, RULE_enum_def = 15, 
		RULE_enum_elem = 16, RULE_enum_field = 17, RULE_unit_def = 18, RULE_form_def = 19, 
		RULE_private_member_def = 20, RULE_member_def = 21, RULE_member_initializer = 22, 
		RULE_constant_var_def = 23, RULE_field_decl = 24, RULE_type_expr = 25, 
		RULE_builtin_type_expr = 26, RULE_lambda_type = 27, RULE_list_type = 28, 
		RULE_unit_type = 29, RULE_range_type = 30, RULE_builtin_type = 31, RULE_arithmetic_type = 32, 
		RULE_rule_def = 33, RULE_function_def = 34, RULE_accessor_def = 35, RULE_alter_def = 36, 
		RULE_parameters = 37, RULE_block = 38, RULE_statement = 39, RULE_procedure_apply = 40, 
		RULE_select_statement = 41, RULE_result_statement = 42, RULE_var_def = 43, 
		RULE_field_modify = 44, RULE_expression = 45, RULE_select_expr = 46, RULE_case_block = 47, 
		RULE_as_block = 48, RULE_default_block = 49, RULE_range = 50, RULE_condition = 51, 
		RULE_cond_term = 52, RULE_relation = 53, RULE_cond_monomial = 54, RULE_terms = 55, 
		RULE_term = 56, RULE_factor = 57, RULE_post_op = 58, RULE_monomial = 59, 
		RULE_member_access = 60, RULE_args = 61, RULE_atom = 62, RULE_list_construct = 63, 
		RULE_struct_construct = 64, RULE_lambda = 65, RULE_literal = 66, RULE_html = 67, 
		RULE_xml = 68, RULE_url = 69, RULE_date = 70, RULE_jid = 71, RULE_loc = 72, 
		RULE_stringLiteral = 73, RULE_number = 74;
	public static final String[] ruleNames = {
		"lore", "header", "docinfo", "encoding", "version", "description", "author", 
		"history", "import_other", "section", "private_section_element", "section_element", 
		"qName", "definition", "type_def", "enum_def", "enum_elem", "enum_field", 
		"unit_def", "form_def", "private_member_def", "member_def", "member_initializer", 
		"constant_var_def", "field_decl", "type_expr", "builtin_type_expr", "lambda_type", 
		"list_type", "unit_type", "range_type", "builtin_type", "arithmetic_type", 
		"rule_def", "function_def", "accessor_def", "alter_def", "parameters", 
		"block", "statement", "procedure_apply", "select_statement", "result_statement", 
		"var_def", "field_modify", "expression", "select_expr", "case_block", 
		"as_block", "default_block", "range", "condition", "cond_term", "relation", 
		"cond_monomial", "terms", "term", "factor", "post_op", "monomial", "member_access", 
		"args", "atom", "list_construct", "struct_construct", "lambda", "literal", 
		"html", "xml", "url", "date", "jid", "loc", "stringLiteral", "number"
	};

	@Override
	public String getGrammarFileName() { return "Lore.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public LoreParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class LoreContext extends ParserRuleContext {
		public List<Section_elementContext> section_element() {
			return getRuleContexts(Section_elementContext.class);
		}
		public Section_elementContext section_element(int i) {
			return getRuleContext(Section_elementContext.class,i);
		}
		public HeaderContext header() {
			return getRuleContext(HeaderContext.class,0);
		}
		public LoreContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lore; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LoreListener ) ((LoreListener)listener).enterLore(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LoreListener ) ((LoreListener)listener).exitLore(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LoreVisitor ) return ((LoreVisitor<? extends T>)visitor).visitLore(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LoreContext lore() throws RecognitionException {
		LoreContext _localctx = new LoreContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_lore);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(150); header();
			setState(154);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - 30)) & ~0x3f) == 0 && ((1L << (_la - 30)) & ((1L << (30 - 30)) | (1L << (32 - 30)) | (1L << (45 - 30)) | (1L << (47 - 30)) | (1L << (50 - 30)) | (1L << (UNIT_NAME - 30)) | (1L << (NAME - 30)))) != 0)) {
				{
				{
				setState(151); section_element();
				}
				}
				setState(156);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HeaderContext extends ParserRuleContext {
		public List<Import_otherContext> import_other() {
			return getRuleContexts(Import_otherContext.class);
		}
		public DocinfoContext docinfo() {
			return getRuleContext(DocinfoContext.class,0);
		}
		public HistoryContext history(int i) {
			return getRuleContext(HistoryContext.class,i);
		}
		public DescriptionContext description() {
			return getRuleContext(DescriptionContext.class,0);
		}
		public Import_otherContext import_other(int i) {
			return getRuleContext(Import_otherContext.class,i);
		}
		public List<AuthorContext> author() {
			return getRuleContexts(AuthorContext.class);
		}
		public List<HistoryContext> history() {
			return getRuleContexts(HistoryContext.class);
		}
		public AuthorContext author(int i) {
			return getRuleContext(AuthorContext.class,i);
		}
		public HeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_header; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LoreListener ) ((LoreListener)listener).enterHeader(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LoreListener ) ((LoreListener)listener).exitHeader(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LoreVisitor ) return ((LoreVisitor<? extends T>)visitor).visitHeader(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HeaderContext header() throws RecognitionException {
		HeaderContext _localctx = new HeaderContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_header);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(158);
			_la = _input.LA(1);
			if (_la==24) {
				{
				setState(157); docinfo();
				}
			}

			setState(161);
			_la = _input.LA(1);
			if (_la==22) {
				{
				setState(160); description();
				}
			}

			setState(166);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==65) {
				{
				{
				setState(163); author();
				}
				}
				setState(168);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(172);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==57) {
				{
				{
				setState(169); history();
				}
				}
				setState(174);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(178);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==49) {
				{
				{
				setState(175); import_other();
				}
				}
				setState(180);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DocinfoContext extends ParserRuleContext {
		public VersionContext version() {
			return getRuleContext(VersionContext.class,0);
		}
		public EncodingContext encoding() {
			return getRuleContext(EncodingContext.class,0);
		}
		public DocinfoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_docinfo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LoreListener ) ((LoreListener)listener).enterDocinfo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LoreListener ) ((LoreListener)listener).exitDocinfo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LoreVisitor ) return ((LoreVisitor<? extends T>)visitor).visitDocinfo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DocinfoContext docinfo() throws RecognitionException {
		DocinfoContext _localctx = new DocinfoContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_docinfo);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(181); match(24);
			setState(182); match(44);
			setState(193);
			switch (_input.LA(1)) {
			case 14:
				{
				{
				setState(183); encoding();
				setState(186);
				_la = _input.LA(1);
				if (_la==35) {
					{
					setState(184); match(35);
					setState(185); version();
					}
				}

				}
				}
				break;
			case 26:
				{
				{
				setState(188); version();
				setState(191);
				_la = _input.LA(1);
				if (_la==35) {
					{
					setState(189); match(35);
					setState(190); encoding();
					}
				}

				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(195); match(10);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EncodingContext extends ParserRuleContext {
		public TerminalNode NORMALSTRING() { return getToken(LoreParser.NORMALSTRING, 0); }
		public EncodingContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_encoding; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LoreListener ) ((LoreListener)listener).enterEncoding(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LoreListener ) ((LoreListener)listener).exitEncoding(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LoreVisitor ) return ((LoreVisitor<? extends T>)visitor).visitEncoding(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EncodingContext encoding() throws RecognitionException {
		EncodingContext _localctx = new EncodingContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_encoding);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(197); match(14);
			setState(198); match(20);
			setState(199); match(NORMALSTRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VersionContext extends ParserRuleContext {
		public UrlContext url() {
			return getRuleContext(UrlContext.class,0);
		}
		public VersionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_version; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LoreListener ) ((LoreListener)listener).enterVersion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LoreListener ) ((LoreListener)listener).exitVersion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LoreVisitor ) return ((LoreVisitor<? extends T>)visitor).visitVersion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VersionContext version() throws RecognitionException {
		VersionContext _localctx = new VersionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_version);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(201); match(26);
			setState(202); match(20);
			setState(203); url();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DescriptionContext extends ParserRuleContext {
		public StringLiteralContext stringLiteral(int i) {
			return getRuleContext(StringLiteralContext.class,i);
		}
		public HtmlContext html() {
			return getRuleContext(HtmlContext.class,0);
		}
		public List<StringLiteralContext> stringLiteral() {
			return getRuleContexts(StringLiteralContext.class);
		}
		public DescriptionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_description; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LoreListener ) ((LoreListener)listener).enterDescription(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LoreListener ) ((LoreListener)listener).exitDescription(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LoreVisitor ) return ((LoreVisitor<? extends T>)visitor).visitDescription(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DescriptionContext description() throws RecognitionException {
		DescriptionContext _localctx = new DescriptionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_description);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(205); match(22);
			setState(206); match(37);
			setState(207); stringLiteral();
			setState(208); match(16);
			setState(209); match(44);
			setState(212);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				{
				setState(210); stringLiteral();
				}
				break;

			case 2:
				{
				setState(211); html();
				}
				break;
			}
			setState(214); match(10);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AuthorContext extends ParserRuleContext {
		public List<UrlContext> url() {
			return getRuleContexts(UrlContext.class);
		}
		public JidContext jid(int i) {
			return getRuleContext(JidContext.class,i);
		}
		public UrlContext url(int i) {
			return getRuleContext(UrlContext.class,i);
		}
		public List<JidContext> jid() {
			return getRuleContexts(JidContext.class);
		}
		public TerminalNode NORMALSTRING() { return getToken(LoreParser.NORMALSTRING, 0); }
		public AuthorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_author; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LoreListener ) ((LoreListener)listener).enterAuthor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LoreListener ) ((LoreListener)listener).exitAuthor(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LoreVisitor ) return ((LoreVisitor<? extends T>)visitor).visitAuthor(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AuthorContext author() throws RecognitionException {
		AuthorContext _localctx = new AuthorContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_author);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(216); match(65);
			setState(217); match(37);
			setState(218); match(NORMALSTRING);
			setState(219); match(16);
			setState(220); match(44);
			{
			setState(223);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				{
				setState(221); jid();
				}
				break;

			case 2:
				{
				setState(222); url();
				}
				break;
			}
			setState(233);
			_la = _input.LA(1);
			if (_la==35) {
				{
				setState(225); match(35);
				setState(230);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (((((_la - 73)) & ~0x3f) == 0 && ((1L << (_la - 73)) & ((1L << (NORMALSTRING - 73)) | (1L << (CHARSTRING - 73)) | (1L << (LONGSTRING - 73)))) != 0)) {
					{
					setState(228);
					switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
					case 1:
						{
						setState(226); jid();
						}
						break;

					case 2:
						{
						setState(227); url();
						}
						break;
					}
					}
					setState(232);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			}
			setState(235); match(10);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HistoryContext extends ParserRuleContext {
		public StringLiteralContext stringLiteral() {
			return getRuleContext(StringLiteralContext.class,0);
		}
		public DateContext date() {
			return getRuleContext(DateContext.class,0);
		}
		public TerminalNode NORMALSTRING() { return getToken(LoreParser.NORMALSTRING, 0); }
		public HistoryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_history; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LoreListener ) ((LoreListener)listener).enterHistory(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LoreListener ) ((LoreListener)listener).exitHistory(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LoreVisitor ) return ((LoreVisitor<? extends T>)visitor).visitHistory(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HistoryContext history() throws RecognitionException {
		HistoryContext _localctx = new HistoryContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_history);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(237); match(57);
			setState(238); match(37);
			setState(239); date();
			setState(240); match(16);
			setState(241); match(44);
			setState(242); match(23);
			setState(243); match(20);
			setState(244); match(NORMALSTRING);
			setState(245); match(35);
			setState(246); match(22);
			setState(247); match(20);
			setState(248); stringLiteral();
			setState(249); match(10);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Import_otherContext extends ParserRuleContext {
		public UrlContext url() {
			return getRuleContext(UrlContext.class,0);
		}
		public Import_otherContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_import_other; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LoreListener ) ((LoreListener)listener).enterImport_other(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LoreListener ) ((LoreListener)listener).exitImport_other(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LoreVisitor ) return ((LoreVisitor<? extends T>)visitor).visitImport_other(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Import_otherContext import_other() throws RecognitionException {
		Import_otherContext _localctx = new Import_otherContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_import_other);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(251); match(49);
			setState(252); url();
			setState(253); match(56);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SectionContext extends ParserRuleContext {
		public QNameContext qName() {
			return getRuleContext(QNameContext.class,0);
		}
		public List<Section_elementContext> section_element() {
			return getRuleContexts(Section_elementContext.class);
		}
		public Private_section_elementContext private_section_element(int i) {
			return getRuleContext(Private_section_elementContext.class,i);
		}
		public Section_elementContext section_element(int i) {
			return getRuleContext(Section_elementContext.class,i);
		}
		public List<Private_section_elementContext> private_section_element() {
			return getRuleContexts(Private_section_elementContext.class);
		}
		public SectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_section; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LoreListener ) ((LoreListener)listener).enterSection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LoreListener ) ((LoreListener)listener).exitSection(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LoreVisitor ) return ((LoreVisitor<? extends T>)visitor).visitSection(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SectionContext section() throws RecognitionException {
		SectionContext _localctx = new SectionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_section);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(255); match(45);
			setState(256); qName();
			setState(257); match(44);
			setState(262);
			_errHandler.sync(this);
			_la = _input.LA(1);
